--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-plugin-inappbrowser": "^3.1.0",
     "core-js": "^2.5.4",
     "firebase": "^7.6.1",
+    "package": "^1.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
