--- a/package.json
+++ b/package.json
@@ -15,30 +15,42 @@
   "dependencies": {
     "@angular/common": "~8.1.2",
     "@angular/core": "~8.1.2",
-    "@angular/fire": "^5.2.3",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.19.1",
+    "@ionic-native/file": "^5.19.1",
     "@ionic-native/file-chooser": "^4.20.0",
     "@ionic-native/firebase": "^5.19.1",
+    "@ionic-native/image-picker": "^5.19.1",
     "@ionic-native/in-app-browser": "^5.19.1",
+    "@ionic-native/media": "^5.19.1",
+    "@ionic-native/media-capture": "^5.19.1",
+    "@ionic-native/photo-viewer": "^5.19.1",
     "@ionic-native/splash-screen": "^5.19.1",
     "@ionic-native/status-bar": "^5.19.1",
+    "@ionic-native/streaming-media": "^5.19.1",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "angularfire2": "^5.2.3",
+    "com-sarriaroman-photoviewer": "^1.2.4",
     "cordova-android": "8.1.0",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.5.6",
     "cordova-plugin-inappbrowser": "^3.1.0",
+    "cordova-plugin-media": "^5.0.3",
+    "cordova-plugin-media-capture": "^3.0.3",
+    "cordova-plugin-streaming-media": "^2.2.0",
+    "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "core-js": "^2.5.4",
-    "firebase": "^7.6.1",
+    "firebase": "^7.7.0",
     "package": "^1.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -94,6 +106,18 @@
       "cordova-plugin-file": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-media-capture": {},
+      "cordova-plugin-media": {
+        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
+      },
+      "cordova-plugin-streaming-media": {},
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
+      },
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
       }
     },
     "platforms": [
